--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -139,7 +139,7 @@ we can easily share it with our collaborators.
 This copy is commonly referred to as \index{repository!remote} the **remote repository**.
 \index{repository|see{version control}}
 
-```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2, out.width="100%"}
+```{r vc1-no-changes, fig.align = "center", fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc1-no-changes.png") |>
   image_crop("3632x2000")
 ```
@@ -195,7 +195,7 @@ When working on files in your local version control
 repository (e.g., using Jupyter) and saving your work, these changes will only initially exist in the
 working directory of the local repository (Figure \@ref(fig:vc2-changes)).
 
-```{r vc2-changes, fig.cap = 'Local repository with changes to files.', fig.retina = 2, out.width="100%"}
+```{r vc2-changes, fig.align = "center", fig.cap = 'Local repository with changes to files.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc2-changes.png") |>
   image_crop("3632x2000")
 ```
@@ -213,7 +213,7 @@ in Figure \@ref(fig:vc-ba2-add), we add only the two files
 that are important to the analysis project (`analysis.ipynb` and `README.md`)
 and not our personal scratch notes for the project (`notes.txt`).
 
-```{r vc-ba2-add, fig.cap = 'Adding modified files to the staging area in the local repository.', fig.retina = 2, out.width="100%"}
+```{r vc-ba2-add, fig.align = "center", fig.cap = 'Adding modified files to the staging area in the local repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc-ba2-add.png") |>
   image_crop("3632x1200")
 ```
@@ -229,7 +229,7 @@ these changes are only being committed to the local repository's history.  The
 remote repository on GitHub has not changed, and collaborators are not yet
 able to see your new changes.
 
-```{r vc-ba3-commit, fig.cap = "Committing the modified files in the staging area to the local repository history, with an informative message about what changed.", fig.retina = 2, out.width="100%"}
+```{r vc-ba3-commit, fig.align = "center", fig.cap = "Committing the modified files in the staging area to the local repository history, with an informative message about what changed.", fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc-ba3-commit.png") |>
   image_crop("3632x1100")
 ```
@@ -243,7 +243,7 @@ local repository. Now when collaborators interact with the remote repository, th
 to see the changes you made. And you can also take comfort in the fact that your work is now backed
 up in the cloud!
 
-```{r vc5-push, fig.cap = 'Pushing the commit to send the changes to the remote repository on GitHub.', fig.retina = 2, out.width="100%"}
+```{r vc5-push, fig.align = "center", fig.cap = 'Pushing the commit to send the changes to the remote repository on GitHub.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc5-push.png") |>
   image_crop("3632x3000")
 ```
@@ -256,7 +256,7 @@ committing them to their own local repository, and pushing their commits to the 
 to share them with you. When they push their changes, those changes will only initially exist in
 the remote GitHub repository and not in your local repository (Figure \@ref(fig:vc6-remote-changes)).
 
-```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local repository.', fig.retina = 2, out.width="100%"}
+```{r vc6-remote-changes, fig.align = "center", fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc6-remote-changes.png") |>
   image_crop("3632x2000")
 ```
@@ -268,7 +268,7 @@ Additionally, until you pull changes from the remote repository, you will not
 be able to push any more changes yourself (though you will still be able to
 work and make commits in your own local repository).
 
-```{r vc7-pull, fig.cap = 'Pulling changes from the remote GitHub repository to synchronize your local repository.', fig.retina = 2, out.width="100%"}
+```{r vc7-pull, fig.align = "center", fig.cap = 'Pulling changes from the remote GitHub repository to synchronize your local repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/vc7-pull.png") |>
   image_crop("3632x2000")
 ```
@@ -299,7 +299,7 @@ Figure \@ref(fig:new-repository-01).
 
 (ref:new-repository-01) New repositories on GitHub can be created by clicking on "New Repository" from the + menu.
 
-```{r new-repository-01, fig.cap = '(ref:new-repository-01)', fig.retina = 2, out.width="100%"}
+```{r new-repository-01, fig.align = "center", fig.cap = '(ref:new-repository-01)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/new_repository_01.png") |>
   image_flop() |>
   image_crop("3632x1148") |>
@@ -321,7 +321,7 @@ following steps shown in Figure \@ref(fig:new-repository-02):
 3. Select "Add a README file." This creates a template `README.md` file in your repository's root folder.
 4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
-```{r new-repository-02, fig.cap = 'Repository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
+```{r new-repository-02, fig.align = "center", fig.cap = 'Repository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/new_repository_02.png") |>
   image_flop() |>
   image_crop("1700x2240+1000-100") |>
@@ -331,7 +331,7 @@ image_read("img/version-control/new_repository_02.png") |>
 A newly created public repository with a `README.md` template file should look something
 like what is shown in Figure \@ref(fig:new-repository-03).
 
-```{r new-repository-03, fig.cap = 'Respository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
+```{r new-repository-03, fig.align = "center", fig.cap = 'Respository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/new_repository_03.png") |>
   image_flop() |>
   image_crop("3584x1700") |>
@@ -345,14 +345,14 @@ The pen tool \index{GitHub!pen tool} can be used to edit existing plain text fil
 the pen tool, the file will be opened in a text box where you can use your
 keyboard to make changes (Figures \@ref(fig:pen-tool-01) and \@ref(fig:pen-tool-02)).
 
-```{r pen-tool-01, fig.cap = 'Clicking on the pen tool opens a text box for editing plain text files.', fig.retina = 2, out.width="100%"}
+```{r pen-tool-01, fig.align = "center", fig.cap = 'Clicking on the pen tool opens a text box for editing plain text files.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/pen-tool_01.png") |>
   image_flop() |>
   image_crop("3584x1500") |>
   image_flop()
 ```
 
-```{r pen-tool-02, fig.cap = 'The text box where edits can be made after clicking on the pen tool.', fig.retina = 2, out.width="100%"}
+```{r pen-tool-02, fig.align = "center", fig.cap = 'The text box where edits can be made after clicking on the pen tool.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/pen-tool_02.png") |>
   # image_flop() |>
   image_crop("3584x2000") # |>
@@ -378,7 +378,7 @@ changes to multiple files simultaneously. This is especially useful when one
 You can also do things like run code when working in a local repository, which you cannot
 do on GitHub. In general, editing on GitHub is reserved for small edits to plain text files.
 
-```{r pen-tool-03, fig.pos = "H", out.extra="", fig.cap = 'Saving changes using the pen tool requires committing those changes, and an associated commit message.', fig.retina = 2, out.width="100%"}
+```{r pen-tool-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Saving changes using the pen tool requires committing those changes, and an associated commit message.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/pen-tool_03.png") |>
   image_crop("3583x1500+1+500")
 ```
@@ -390,7 +390,7 @@ from your computer. To create a new plain text file, click the "Add file"
 drop-down menu and select the "Create new file" option
 (Figure \@ref(fig:create-new-file-01)).
 
-```{r create-new-file-01, fig.cap = 'New plain text files can be created directly on GitHub.', fig.retina = 2, out.width="100%"}
+```{r create-new-file-01, fig.align = "center", fig.cap = 'New plain text files can be created directly on GitHub.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/create-new-file_01.png") |>
   image_flop() |>
   image_crop("3584x1600") |>
@@ -407,7 +407,7 @@ Note that GitHub understands and renders `.md` files \index{markdown} using a
 very similar to Jupyter notebooks, so the "Preview" tab is especially helpful
 for checking markdown code correctness.
 
-```{r create-new-file-02, fig.cap = 'New plain text files require a file name in the text box circled in red, and file content entered in the larger text box (red arrow).', fig.retina = 2, out.width="100%"}
+```{r create-new-file-02, fig.align = "center", fig.cap = 'New plain text files require a file name in the text box circled in red, and file content entered in the larger text box (red arrow).', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/create-new-file_02.png") |>
   image_flop() |>
   image_crop("3584x1300") |>
@@ -417,7 +417,7 @@ image_read("img/version-control/create-new-file_02.png") |>
 Save and commit your changes by clicking the green "Commit changes" button at the
 bottom of the page (Figure \@ref(fig:create-new-file-03)).
 
-```{r create-new-file-03, fig.cap = 'To be saved, newly created files are required to be committed along with an associated commit message.', fig.retina = 2, out.width="100%"}
+```{r create-new-file-03, fig.align = "center", fig.cap = 'To be saved, newly created files are required to be committed along with an associated commit message.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/create-new-file_03.png") |>
   image_crop("3584x1500+1+500")
 ```
@@ -431,7 +431,7 @@ link to access a file browser dialog. Once the files you want to upload have
 been selected, click the green "Commit changes" button at the bottom of the
 page (Figure \@ref(fig:upload-files-02)).
 
-```{r upload-files-01, fig.cap = 'New files of any type can be uploaded to GitHub.', fig.retina = 2, out.width="100%"}
+```{r upload-files-01, fig.align = "center", fig.cap = 'New files of any type can be uploaded to GitHub.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/upload-files_01.png") |>
   image_flop() |>
   image_crop("3584x1600") |>
@@ -440,7 +440,7 @@ image_read("img/version-control/upload-files_01.png") |>
 
 (ref:upload-files-02) Specify files to upload by dragging them into the GitHub website (red circle) or by clicking on "choose your files." Uploaded files are also required to be committed along with an associated commit message.
 
-```{r upload-files-02, fig.pos = "H", out.extra="", fig.cap = '(ref:upload-files-02)', fig.retina = 2, out.width="100%"}
+```{r upload-files-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:upload-files-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/upload-files_02.png") |>
   image_flop() |>
   image_crop("3584x2200") |>
@@ -492,7 +492,7 @@ and password to proceed.
 
 (ref:generate-pat-01) The "Generate new token" button used to initiate the creation of a new personal access token. It is found in the "Personal access tokens" section of the "Developer settings" page in your account settings.
 
-```{r generate-pat-01, fig.cap = '(ref:generate-pat-01)', fig.retina = 2, out.width="100%"}
+```{r generate-pat-01, fig.align = "center", fig.cap = '(ref:generate-pat-01)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/generate-pat_01.png")
 ```
 
@@ -507,7 +507,7 @@ and click the green "Generate token" button (Figure \@ref(fig:generate-pat-02)).
 
 (ref:generate-pat-02) Webpage for creating a new personal access token.
 
-```{r generate-pat-02, fig.pos = "H", out.extra="", fig.cap = '(ref:generate-pat-02)', fig.retina = 2, out.width="100%"}
+```{r generate-pat-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:generate-pat-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/generate-pat_02.png")
 ```
 
@@ -525,7 +525,7 @@ see the additional resources section at the end of this chapter.
 
 (ref:generate-pat-03) Display of the newly generated personal access token.
 
-```{r generate-pat-03, fig.pos = "H", out.extra="", fig.cap = '(ref:generate-pat-03)', fig.retina = 2, out.width="100%"}
+```{r generate-pat-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:generate-pat-03)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/generate-pat_03.png")
 ```
 
@@ -539,7 +539,7 @@ of the Code drop-down menu on GitHub (Figure \@ref(fig:clone-02)).
 
 (ref:clone-02) The green "Code" drop-down menu contains the remote address (URL) corresponding to the location of the remote GitHub repository.
 
-```{r clone-02, fig.pos = "H", out.extra="", fig.cap = '(ref:clone-02)', fig.retina = 2, out.width="100%"}
+```{r clone-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:clone-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/clone_02.png") |>
   image_crop("3584x1050")
 ```
@@ -547,7 +547,7 @@ image_read("img/version-control/clone_02.png") |>
 Open Jupyter, and click the Git+ icon on the file browser tab
 (Figure \@ref(fig:clone-01)).
 
-```{r clone-01, fig.pos = "H", out.extra="", fig.cap = 'The Jupyter Git Clone icon (red circle).', fig.retina = 2, out.width="100%"}
+```{r clone-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The Jupyter Git Clone icon (red circle).', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/clone_01.png") |>
   image_crop("2400x1300+1")
 ```
@@ -555,7 +555,7 @@ image_read("img/version-control/clone_01.png") |>
 Paste the URL of the GitHub project repository you
 created and click the blue "CLONE" button (Figure \@ref(fig:clone-03)).
 
-```{r clone-03, fig.pos = "H", out.extra="", fig.cap = 'Prompt where the remote address (URL) corresponding to the location of the GitHub repository needs to be input in Jupyter.', fig.retina = 2, out.width="100%"}
+```{r clone-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Prompt where the remote address (URL) corresponding to the location of the GitHub repository needs to be input in Jupyter.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/clone_03.png") |>
   image_crop("2400x1430+1")
 ```
@@ -563,7 +563,7 @@ image_read("img/version-control/clone_03.png") |>
 On the file browser tab, you will now see a folder for the repository.
 Inside this folder  will be all the files that existed on GitHub (Figure \@ref(fig:clone-04)).
 
-```{r clone-04, fig.pos = "H", out.extra="", fig.cap = 'Cloned GitHub repositories can been seen and accessed via the Jupyter file browser.', fig.retina = 2, out.width="100%"}
+```{r clone-04, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Cloned GitHub repositories can been seen and accessed via the Jupyter file browser.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/clone_04.png") |>
   image_crop("2400x1200+1")
 ```
@@ -577,7 +577,7 @@ To "add" this modified file to the staging area (i.e., flag that this is a
 file whose changes we would like to commit), click the Jupyter Git extension
 icon on the far left-hand side of Jupyter (Figure \@ref(fig:git-add-01)).
 
-```{r git-add-01, fig.pos = "H", out.extra="", fig.cap = 'Jupyter Git extension icon (circled in red).', fig.retina = 2, out.width="100%"}
+```{r git-add-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Jupyter Git extension icon (circled in red).', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_add_01.png") |>
   image_crop("3584x1200")
 ```
@@ -596,7 +596,7 @@ only add the files you directly create and edit.
 
 (ref:git-add-02) `eda.ipynb` is added to the staging area via the plus sign (+).
 
-```{r git-add-02, fig.cap = '(ref:git-add-02)', fig.retina = 2, out.width="100%"}
+```{r git-add-02, fig.align = "center", fig.cap = '(ref:git-add-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_add_02.png") |>
   image_crop("3584x1200")
 ```
@@ -610,7 +610,7 @@ so that your collaborators (and future you) know what happened in this commit.
 
 (ref:git-add-03) Adding `eda.ipynb` makes it visible in the staging area.
 
-```{r git-add-03, fig.pos = "H", out.extra="", fig.cap = '(ref:git-add-03)', fig.retina = 2, out.width="100%"}
+```{r git-add-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:git-add-03)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_add_03.png") |>
   image_crop("3584x1200")
 ```
@@ -629,7 +629,7 @@ When you click the "Commit" button for the first time, you will be prompted to
 enter your name and email. This only needs to be done once for each machine
 you use Git on.
 
-```{r git-commit-01, fig.pos = "H", out.extra="", fig.cap = 'A commit message must be added into the Jupyter Git extension commit text box before the blue Commit button can be used to record the commit.', fig.retina = 2, out.width="100%"}
+```{r git-commit-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'A commit message must be added into the Jupyter Git extension commit text box before the blue Commit button can be used to record the commit.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_commit_01.png")
 ```
 
@@ -637,7 +637,7 @@ After "committing" the file(s), you will see there are 0 "Staged" files.
 You are now ready to push your changes
 to the remote repository on GitHub (Figure \@ref(fig:git-commit-03)).
 
-```{r git-commit-03, fig.pos = "H", out.extra="", fig.cap = 'After recording a commit, the staging area should be empty.', fig.retina = 2, out.width="100%"}
+```{r git-commit-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'After recording a commit, the staging area should be empty.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_commit_03.png") |>
   image_crop("3584x1500")
 ```
@@ -651,7 +651,7 @@ click on the cloud icon with the up arrow on the Jupyter Git tab
 
 (ref:git-push-01) The Jupyter Git extension "push" button (circled in red).
 
-```{r git-push-01, fig.pos = "H", out.extra="", fig.cap = '(ref:git-push-01)', fig.retina = 2, out.width="100%"}
+```{r git-push-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:git-push-01)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_push_01.png") |>
   image_crop("3584x1500")
 ```
@@ -661,7 +661,7 @@ and the personal access token that you generated
 earlier (not your account password!). Click
 the blue "OK" button to initiate the push (Figure \@ref(fig:git-push-02)).
 
-```{r git-push-02, fig.pos = "H", out.extra="", fig.cap = 'Enter your Git credentials to authorize the push to the remote repository.', fig.retina = 2, out.width="100%"}
+```{r git-push-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Enter your Git credentials to authorize the push to the remote repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_push_02.png") |>
   image_crop("3584x1900")
 ```
@@ -670,7 +670,7 @@ If the files were successfully pushed to the project repository on
 GitHub, you will be shown a success message (Figure \@ref(fig:git-push-03)).
 Click "Dismiss" to continue working in Jupyter.
 
-```{r git-push-03, fig.pos = "H", out.extra="", fig.cap = 'The prompt that the push was successful.', fig.retina = 2, out.width="100%"}
+```{r git-push-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The prompt that the push was successful.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_push_03.png") |>
   image_crop("3584x1900")
 ```
@@ -679,7 +679,7 @@ If you visit the remote repository on GitHub,
 you will see that the changes now exist there too
 (Figure \@ref(fig:git-push-04))!
 
-```{r git-push-04, fig.pos = "H", out.extra="", fig.cap = 'The GitHub web interface shows a preview of the commit message, and the time of the most recently pushed commit for each file.', fig.retina = 2, out.width="100%"}
+```{r git-push-04, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The GitHub web interface shows a preview of the commit message, and the time of the most recently pushed commit for each file.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_push_04.png") |>
   image_crop("3584x1900")
 ```
@@ -696,7 +696,7 @@ projects, navigate to the "Settings" tab (Figure \@ref(fig:add-collab-01)).
 
 (ref:add-collab-01) The "Settings" tab on the GitHub web interface.
 
-```{r add-collab-01, fig.pos = "H", out.extra="",  fig.cap = '(ref:add-collab-01)', fig.retina = 2, out.width="100%"}
+```{r add-collab-01, fig.pos = "H", out.extra="",  fig.align = "center", fig.cap = '(ref:add-collab-01)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/add_collab_01.png") |>
   image_crop("3584x1250")
 ```
@@ -705,7 +705,7 @@ Then click "Manage access" (Figure \@ref(fig:add-collab-02)).
 
 (ref:add-collab-02) The "Manage access" tab on the GitHub web interface.
 
-```{r add-collab-02, fig.pos = "H", out.extra="", fig.cap = '(ref:add-collab-02)', fig.retina = 2, out.width="100%"}
+```{r add-collab-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:add-collab-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/add_collab_02.png") |>
   image_crop("3584x1200")
 ```
@@ -714,7 +714,7 @@ Then click the green "Invite a collaborator" button (Figure \@ref(fig:add-collab
 
 (ref:add-collab-03) The "Invite a collaborator" button on the GitHub web interface.
 
-```{r add-collab-03, fig.pos = "H", out.extra="", fig.cap = '(ref:add-collab-03)', fig.retina = 2, out.width="100%"}
+```{r add-collab-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:add-collab-03)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/add_collab_03.png") |>
   image_crop("3584x2200")
 ```
@@ -722,14 +722,14 @@ image_read("img/version-control/add_collab_03.png") |>
 Type in the collaborator's GitHub username or email,
 and select their name when it appears (Figure \@ref(fig:add-collab-04)).
 
-```{r add-collab-04, fig.pos = "H", out.extra="", fig.cap = "The text box where a collaborator's GitHub username or email can be entered.", fig.retina = 2, out.width="100%"}
+```{r add-collab-04, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "The text box where a collaborator's GitHub username or email can be entered.", fig.retina = 2, out.width="100%"}
 image_read("img/version-control/add_collab_04.png") |>
   image_crop("3584x1250")
 ```
 
 Finally, click the green "Add collaborator to this repository" button (Figure \@ref(fig:add-collab-05)).
 
-```{r add-collab-05, fig.pos = "H", out.extra="", fig.cap = 'The confirmation button for adding a collaborator to a repository on the GitHub web interface.', fig.retina = 2, out.width="100%"}
+```{r add-collab-05, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The confirmation button for adding a collaborator to a repository on the GitHub web interface.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/add_collab_05.png") |>
   image_crop("3584x1250")
 ```
@@ -745,7 +745,7 @@ We will now walk through how to use the Jupyter Git extension tool to pull chang
 to our `eda.ipynb` analysis file that were made by a collaborator
 (Figure \@ref(fig:git-pull-00)).
 
-```{r git-pull-00, fig.pos = "H", out.extra="", fig.cap = 'The GitHub interface indicates the name of the last person to push a commit to the remote repository, a preview of the associated commit message, the unique commit identifier, and how long ago the commit was snapshotted.', fig.retina = 2, out.width="100%"}
+```{r git-pull-00, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The GitHub interface indicates the name of the last person to push a commit to the remote repository, a preview of the associated commit message, the unique commit identifier, and how long ago the commit was snapshotted.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_pull_00.png") |>
   image_crop("3584x1600")
 ```
@@ -753,7 +753,7 @@ image_read("img/version-control/git_pull_00.png") |>
 You can tell Git to "pull" by \index{git!pull} clicking on the cloud icon with
 the down arrow in Jupyter (Figure \@ref(fig:git-pull-01)).
 
-```{r git-pull-01, fig.pos = "H", out.extra="", fig.cap = 'The Jupyter Git extension clone button.', fig.retina = 2, out.width="100%"}
+```{r git-pull-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The Jupyter Git extension clone button.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_pull_01.png") |>
   image_crop("3584x1430")
 ```
@@ -761,7 +761,7 @@ image_read("img/version-control/git_pull_01.png") |>
 Once the files are successfully pulled from GitHub, you need to click "Dismiss"
 to keep working (Figure \@ref(fig:git-pull-02)).
 
-```{r git-pull-02, fig.pos = "H", out.extra="", fig.cap = 'The prompt after changes have been successfully pulled from a remote repository.', fig.retina = 2, out.width="100%"}
+```{r git-pull-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'The prompt after changes have been successfully pulled from a remote repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_pull_02.png") |>
   image_crop("3584x1450")
 ```
@@ -771,7 +771,7 @@ you should be able to see them (Figure \@ref(fig:git-pull-03)).
 
 (ref:git-pull-03) Changes made by the collaborator to `eda.ipynb` (code highlighted by red arrows).
 
-```{r git-pull-03, fig.pos = "H", out.extra="", fig.cap = '(ref:git-pull-03)', fig.retina = 2, out.width="100%"}
+```{r git-pull-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:git-pull-03)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_pull_03.png") |>
   image_crop("3584x1450")
 ```
@@ -780,7 +780,7 @@ It can be very useful to review the history of the changes to your project. You
 can do this directly in Jupyter by clicking "History" in the Git tab
 (Figure \@ref(fig:git-pull-04)).
 
-```{r git-pull-04, fig.pos = "H", out.extra="", fig.cap = 'Version control repository history viewed using the Jupyter Git extension.', fig.retina = 2, out.width="100%"}
+```{r git-pull-04, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Version control repository history viewed using the Jupyter Git extension.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/git_pull_04.png") |>
   image_crop("3584x1600")
 ```
@@ -793,7 +793,7 @@ then you will be unable to push your changes to GitHub until you pull.
 This situation can be recognized by the error message
 shown in Figure \@ref(fig:merge-conflict-01).
 
-```{r merge-conflict-01, fig.pos = "H", out.extra="", fig.cap = 'Error message that indicates that there are changes on the remote repository that you do not have locally.', fig.retina = 2, out.width="100%"}
+```{r merge-conflict-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Error message that indicates that there are changes on the remote repository that you do not have locally.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/merge_conflict_01.png") |>
   image_crop("3584x1450")
 ```
@@ -810,7 +810,7 @@ not know whether to keep your version of the line(s), your collaborators
 version of the line(s), or some blend of the two. When this happens, Git will
 tell you that you have a merge conflict in certain file(s) (Figure \@ref(fig:merge-conflict-03)).
 
-```{r merge-conflict-03, fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes.', fig.retina = 2, out.width="100%"}
+```{r merge-conflict-03, fig.align = "center", fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/merge_conflict_03.png") |>
   image_crop("3584x1450")
 ```
@@ -821,7 +821,7 @@ To fix the merge conflict, \index{git!merge conflict} you need to open the offen
 in a plain text editor and look for special marks that Git puts in the file to
 tell you where the merge conflict occurred (Figure \@ref(fig:merge-conflict-04)).
 
-```{r merge-conflict-04, fig.cap = 'How to open a Jupyter notebook as a plain text file view in Jupyter.', fig.retina = 2, out.width="100%"}
+```{r merge-conflict-04, fig.align = "center", fig.cap = 'How to open a Jupyter notebook as a plain text file view in Jupyter.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/merge_conflict_04.png") |>
   image_crop("3584x1200")
 ```
@@ -835,7 +835,7 @@ In Figure \@ref(fig:merge-conflict-05), you can see that in your local repositor
 there is a line of code that calls `scale_color_manual` with three color values (`deeppink2`, `cyan4`, and `purple1`).
 It looks like your collaborator made an edit to that line too, except with different colors (to `blue3`, `red3`, and `black`)!
 
-```{r merge-conflict-05, fig.cap = 'Merge conflict identifiers (highlighted in red).', fig.retina = 2, out.width="100%"}
+```{r merge-conflict-05, fig.align = "center", fig.cap = 'Merge conflict identifiers (highlighted in red).', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/merge_conflict_05.png") |>
   image_crop("3584x1400")
 ```
@@ -844,7 +844,7 @@ Once you have decided which version of the change (or what combination!) to
 keep, you need to use the plain text editor to remove the special marks that
 Git added (Figure \@ref(fig:merge-conflict-06)).
 
-```{r merge-conflict-06, fig.cap = 'File where a merge conflict has been resolved.', fig.retina = 2, out.width="100%"}
+```{r merge-conflict-06, fig.align = "center", fig.cap = 'File where a merge conflict has been resolved.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/merge_conflict_06.png") |>
   image_crop("3584x1400")
 ```
@@ -878,7 +878,7 @@ first click on the "Issues" tab (Figure \@ref(fig:issue-01)).
 
 (ref:issue-01) The "Issues" tab on the GitHub web interface.
 
-```{r issue-01, fig.pos = "H", out.extra="", fig.cap = '(ref:issue-01)', fig.retina = 2, out.width="100%"}
+```{r issue-01, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:issue-01)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/issue_01.png") |>
   image_crop("3584x1700")
 ```
@@ -889,7 +889,7 @@ Next click the "New issue" button (Figure \@ref(fig:issue-02)).
 
 (ref:issue-02) The "New issue" button on the GitHub web interface.
 
-```{r issue-02, fig.pos = "H", out.extra="", fig.cap = '(ref:issue-02)', fig.retina = 2, out.width="100%"}
+```{r issue-02, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:issue-02)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/issue_02.png") |>
   image_crop("3584x1250")
 ```
@@ -898,7 +898,7 @@ Add an issue title (which acts like an email subject line), and then put the
 body of the message in the larger text box. Finally, click "Submit new issue"
 to post the issue to share with others (Figure \@ref(fig:issue-03)).
 
-```{r issue-03, fig.pos = "H", out.extra="", fig.cap = 'Dialog boxes and submission button for creating new GitHub issues.', fig.retina = 2, out.width="100%"}
+```{r issue-03, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Dialog boxes and submission button for creating new GitHub issues.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/issue_03.png") |>
   image_crop("3584x2200")
 ```
@@ -906,7 +906,7 @@ image_read("img/version-control/issue_03.png") |>
 You can reply to an issue that someone opened by adding your written response to
 the large text box and clicking comment (Figure \@ref(fig:issue-04)).
 
-```{r issue-04, fig.pos = "H", out.extra="", fig.cap = 'Dialog box for replying to GitHub issues.', fig.retina = 2, out.width="100%"}
+```{r issue-04, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = 'Dialog box for replying to GitHub issues.', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/issue_04.png") |>
   image_crop("3584x2000")
 ```
@@ -917,7 +917,7 @@ in the "Issue" tab (Figure \@ref(fig:issue-06)).
 
 (ref:issue-06) The "Closed" issues tab on the GitHub web interface.
 
-```{r issue-06, fig.pos = "H", out.extra="", fig.cap = '(ref:issue-06)', fig.retina = 2, out.width="100%"}
+```{r issue-06, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = '(ref:issue-06)', fig.retina = 2, out.width="100%"}
 image_read("img/version-control/issue_06.png") |>
   image_crop("3584x1900")
 ```
