--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -89,7 +89,7 @@ are as follows:
 - **bar plots** visualize comparisons of amounts
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) \index{distribution}
 
-```{r plot-sketches, echo = FALSE, fig.width = 4.5, fig.height = 4.65, fig.align = 'center', fig.cap = "Examples of scatter, line and bar plots, as well as histograms."}
+```{r plot-sketches, echo = FALSE, fig.width = 4.5, fig.height = 4.65, fig.align = "center", fig.cap = "Examples of scatter, line and bar plots, as well as histograms."}
 set.seed(1)
 
 scatter_plot <- tibble(x = seq(0.25, 10, by = 0.5) + rnorm(20, 1, 1.5),
@@ -295,7 +295,7 @@ default settings.
 
 (ref:03-ggplot-function-scatter) Creating a scatter plot with the `ggplot` function.
 
-```{r 03-ggplot-function-scatter, echo = FALSE, fig.cap = "(ref:03-ggplot-function-scatter)", message = FALSE, out.width = "100%"}
+```{r 03-ggplot-function-scatter, echo = FALSE, fig.align = "center", fig.cap = "(ref:03-ggplot-function-scatter)", message = FALSE, out.width = "100%"}
 image_read("img/viz/ggplot_function_scatter.jpeg") |>
   image_crop("1625x1900")
 ```
@@ -763,7 +763,7 @@ function. You can also print a list of color-blind friendly palettes by adding
 
 (ref:rcolorbrewer) Color palettes available from the `RColorBrewer` R package.
 
-```{r rcolorbrewer, fig.height = 7, fig.cap = "(ref:rcolorbrewer)"}
+```{r rcolorbrewer, fig.height = 7, fig.align = "center", fig.cap = "(ref:rcolorbrewer)"}
 library(RColorBrewer)
 display.brewer.all(colorblindFriendly = TRUE)
 ```
@@ -850,7 +850,7 @@ can_lang <- bind_rows(
 
 We have added a few more layers to make the data visualization in Figure \@ref(fig:03-nachos-to-cheesecake) even more effective. Specifically, we used have improved the visualizations accessibility by choosing colors that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent. \index{ggplot!transparency}\index{alpha|see{ggplot}}
 
-```{r 03-nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
+```{r 03-nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
 ggplot(can_lang, aes(
   x = most_at_home_percent,
   y = mother_tongue_percent,
@@ -1459,7 +1459,7 @@ scatter plot of
 the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata],
 shown in Figure \@ref(fig:03-plot-line).
 
-```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 3.75, fig.height = 3.5, fig.pos = "H", out.extra="", fig.cap = "Scatter plot of waiting time and eruption time."}
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 3.75, fig.height = 3.5, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "Scatter plot of waiting time and eruption time."}
 library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
