--- a/source/jupyter.Rmd
+++ b/source/jupyter.Rmd
@@ -81,7 +81,7 @@ to make a conscious effort to perform data analysis in a reproducible manner.
 An example of what a Jupyter notebook looks like is shown in
 Figure \@ref(fig:img-jupyter).
 
-```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2, out.width="100%"}
+```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/jupyter/jupyter.png")
 ```
 
@@ -111,12 +111,12 @@ also have a number inside the square brackets to the left of the cell.
 This number indicates the order in which the cells were run
 (Figure \@ref(fig:code-cell-run)).
 
-```{r code-cell-not-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has not yet been executed.", fig.retina = 2, out.width="100%"}
+```{r code-cell-not-run, echo = FALSE, fig.align = "center", fig.cap = "A code cell in Jupyter that has not yet been executed.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/code-cell-not-run.png") |>
   image_crop("3632x1000")
 ```
 
-```{r code-cell-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has been executed.", fig.retina = 2, out.width="100%"}
+```{r code-cell-run, echo = FALSE, fig.align = "center", fig.cap = "A code cell in Jupyter that has been executed.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/code-cell-run.png") |>
   image_crop("3632x2000")
 ```
@@ -139,7 +139,7 @@ has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be 
 by either pressing the **Run** (`r play()`).
 button in the toolbar, or by using the keyboard shortcut `Shift + Enter`.
 
-```{r activate-and-run-button, echo = FALSE, fig.cap = "An activated cell that is ready to be run. The blue rectangle to the cell's left (annotated by a red arrow) indicates that it is ready to be run. The cell can be run by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
+```{r activate-and-run-button, echo = FALSE, fig.align = "center", fig.cap = "An activated cell that is ready to be run. The blue rectangle to the cell's left (annotated by a red arrow) indicates that it is ready to be run. The cell can be run by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/activate-and-run-button-annotated.png") |>
   image_crop("3632x900")
 ```
@@ -161,7 +161,7 @@ command was run will be deleted. In other words, restarting the session and
 then running all cells (options 2 or 3) emulates how your notebook code would
 run if you completely restarted Jupyter before executing your entire notebook.
 
-```{r restart-kernel-run-all, echo = FALSE, fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
+```{r restart-kernel-run-all, echo = FALSE, fig.align = "center", fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/restart-kernel-run-all.png") |>
   image_crop("3632x900")
 ```
@@ -191,7 +191,7 @@ toolbar. By default, all new cells in Jupyter start out as code cells,
 so after this, all you have to do is write R code within the new cell you just
 created!
 
-```{r create-new-code-cell, echo = FALSE, fig.cap = "New cells can be created by clicking the + button, and are by default code cells.", fig.retina = 2, out.width="100%"}
+```{r create-new-code-cell, echo = FALSE, fig.align = "center", fig.cap = "New cells can be created by clicking the + button, and are by default code cells.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/create-new-code-cell.png") |>
   image_crop("3632x900")
 ```
@@ -217,12 +217,12 @@ can then use your keyboard to edit the text. To view the formatted
 (or *rendered*) text (Figure \@ref(fig:markdown-cell-run)), click the **Run** (`r play()`) button in the toolbar,
 or use the `Shift + Enter` keyboard shortcut.
 
-```{r markdown-cell-not-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has not yet been rendered and can be edited.", fig.retina = 2, out.width="100%"}
+```{r markdown-cell-not-run, echo = FALSE, fig.align = "center", fig.cap = "A Markdown cell in Jupyter that has not yet been rendered and can be edited.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/markdown-cell-not-run.png") |>
   image_crop("3632x900")
 ```
 
-```{r markdown-cell-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has been rendered and exhibits rich text formatting. ", fig.retina = 2, out.width="100%"}
+```{r markdown-cell-run, echo = FALSE, fig.align = "center", fig.cap = "A Markdown cell in Jupyter that has been rendered and exhibits rich text formatting. ", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/markdown-cell-run.png") |>
   image_crop("3632x900")
 ```
@@ -236,7 +236,7 @@ cell. To do this, click on the cell with your cursor to
 ensure it is activated.  Then click on the drop-down box on the toolbar that says "Code" (it
 is next to the `r fast_forward()` button), and change it from "**Code**" to "**Markdown**" (Figure \@ref(fig:convert-to-markdown-cell)).
 
-```{r convert-to-markdown-cell, echo = FALSE, fig.cap = "New cells are by default code cells. To create Markdown cells, the cell format must be changed.", fig.retina = 2, out.width="100%"}
+```{r convert-to-markdown-cell, echo = FALSE, fig.align = "center", fig.cap = "New cells are by default code cells. To create Markdown cells, the cell format must be changed.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/convert-to-markdown-cell.png") |>
   image_crop("3632x900")
 ```
@@ -284,12 +284,12 @@ the future, this would lead
 to errors when the notebook is run in the conventional
 linear order (Figure \@ref(fig:out-of-order-3)).
 
-```{r out-of-order-1, echo = FALSE, fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
+```{r out-of-order-1, echo = FALSE, fig.align = "center", fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/out-of-order-1.png") |>
   image_crop("3632x800")
 ```
 
-```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear order without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
+```{r out-of-order-2, echo = FALSE, fig.align = "center", fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear order without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/out-of-order-2.png") |>
   image_crop("3632x800")
 ```
@@ -297,7 +297,7 @@ image_read("img/jupyter/out-of-order-2.png") |>
 
 (ref:out-of-order-3) Code that was written out of order, and was executed in a linear order using "Restart Kernel and Run All Cells..." This resulted in an error at the execution of the second code cell and it failed to run all code cells in the notebook.
 
-```{r out-of-order-3, echo = FALSE, fig.cap = '(ref:out-of-order-3)', fig.retina = 2, out.width="100%"}
+```{r out-of-order-3, echo = FALSE, fig.align = "center", fig.cap = '(ref:out-of-order-3)', fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/out-of-order-3.png") |>
   image_crop("3632x800")
 ```
@@ -381,12 +381,12 @@ for you, and you will not be able to see the column delimiters, \index{delimiter
 you will not know which function to use, nor which arguments to use and values
 to specify for them.
 
-```{r open-data-w-editor-1, echo = FALSE, fig.cap = "Opening data files with an editor in Jupyter.", fig.retina = 2, out.width="100%"}
+```{r open-data-w-editor-1, echo = FALSE, fig.align = "center", fig.cap = "Opening data files with an editor in Jupyter.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/open_data_w_editor_01.png") |>
   image_crop("3632x2000")
 ```
 
-```{r open-data-w-editor-2, echo = FALSE, fig.cap = "A data file as viewed in an editor in Jupyter.", fig.retina = 2, out.width="100%"}
+```{r open-data-w-editor-2, echo = FALSE, fig.align = "center", fig.cap = "A data file as viewed in an editor in Jupyter.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/open_data_w_editor_02.png") |>
   image_crop("3632x2000")
 ```
@@ -429,7 +429,7 @@ the R icon under the **Notebook** heading. If no **Launcher** tab is visible,
 you can get a new one via clicking the **+** button at the top of the Jupyter
 file explorer (Figure \@ref(fig:launcher)).
 
-```{r launcher, echo = FALSE, fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
+```{r launcher, echo = FALSE, fig.align = "center", fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
 image_read("img/jupyter/launcher-annotated.png") |>
   image_crop("3632x2000")
 ```
