--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -94,7 +94,7 @@ file titled `worksheet_02.ipynb`, and our current working directory is `workshee
 typically, as is the case here, the working directory is the directory containing the file you are currently
 working on.
 
-```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system.", fig.retina = 2, out.width="100%"}
+```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Example file system.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/filesystem.jpeg")
 ```
 
@@ -908,7 +908,7 @@ on [Craiglist](https://vancouver.craigslist.org). When we visit the Vancouver Cr
 website \index{Craigslist} and search for one-bedroom apartments,
 we should see something similar to Figure \@ref(fig:craigslist-human).
 
-```{r craigslist-human, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Craigslist webpage of advertisements for one-bedroom apartments.", fig.retina = 2, out.width="100%"}
+```{r craigslist-human, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Craigslist webpage of advertisements for one-bedroom apartments.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/craigslist_human.png")
 ```
 
@@ -998,7 +998,7 @@ find that SelectorGadget shows us the selector `.result-price`
 in its toolbar, and highlights all the other apartment
 prices that would be obtained using that selector (Figure \@ref(fig:sg1)).
 
-```{r sg1, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain the CCS selector useful for obtaining apartment prices.", fig.retina = 2, out.width="100%"}
+```{r sg1, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain the CCS selector useful for obtaining apartment prices.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/sg1.png")
 ```
 
@@ -1006,7 +1006,7 @@ If we then click the size of an apartment listing, SelectorGadget shows us
 the `span` selector, and highlights many of the lines on the page; this indicates that the
 `span` selector is not specific enough to capture only apartment sizes (Figure \@ref(fig:sg3)).
 
-```{r sg3, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain a CCS selector useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
+```{r sg3, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain a CCS selector useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/sg3.png")
 ```
 
@@ -1014,7 +1014,7 @@ To narrow the selector, we can click one of the highlighted elements that
 we *do not* want. For example, we can deselect the "pic/map" links,
 resulting in only the data we want highlighted using the `.housing` selector (Figure \@ref(fig:sg2)).
 
-```{r sg2, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to refine the CCS selector to one that is most useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
+```{r sg2, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Using the SelectorGadget on a Craigslist webpage to refine the CCS selector to one that is most useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/sg2.png")
 ```
 
@@ -1047,7 +1047,7 @@ We will use the SelectorGadget tool to pick elements that we are interested in
 (city names and population counts) and deselect others to indicate that we are not
 interested in them (province names), as shown in Figure \@ref(fig:sg4).
 
-```{r sg4, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Wikipedia webpage.", fig.retina = 2, out.width="100%"}
+```{r sg4, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Using the SelectorGadget on a Wikipedia webpage.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/sg4.png")
 ```
 
@@ -1165,7 +1165,7 @@ picture of the Rho-Ophiuchi cloud complex [@rhoophiuchi] in Figure \@ref(fig:NAS
 
 (ref:NASA-API-Rho-Ophiuchi) The James Webb Space Telescope's NIRCam image of the Rho Ophiuchi molecular cloud complex.
 
-```{r NASA-API-Rho-Ophiuchi, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:NASA-API-Rho-Ophiuchi)", fig.retina = 2, out.width="60%"}
+```{r NASA-API-Rho-Ophiuchi, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:NASA-API-Rho-Ophiuchi)", fig.retina = 2, out.width="60%"}
 knitr::include_graphics("img/reading/NASA-API-Rho-Ophiuchi.png")
 ```
 
@@ -1175,7 +1175,7 @@ associate with the key. The signup form looks something like Figure \@ref(fig:NA
 After filling out the basic information, you will receive the token via email.
 Make sure to store the key in a safe place, and keep it private.
 
-```{r NASA-API-signup, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Generating the API access token for the NASA API", fig.retina = 2, out.width="100%"}
+```{r NASA-API-signup, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Generating the API access token for the NASA API", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/NASA-API-signup.png")
 ```
 
@@ -1194,7 +1194,7 @@ Be careful not to overrun your quota! So *before* we try to use the API, we will
 [the NASA website](https://api.nasa.gov/) to see what limits we should abide by when using the API.
 These limits are outlined in Figure \@ref(fig:NASA-API-limits).
 
-```{r NASA-API-limits, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The NASA website specifies an hourly limit of 1,000 requests.", fig.retina = 2, out.width="100%"}
+```{r NASA-API-limits, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "The NASA website specifies an hourly limit of 1,000 requests.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/NASA-API-limits.png")
 ```
 
@@ -1216,7 +1216,7 @@ query parameters of the form `parameter=value`, separated by `&` characters. The
 "Astronomy Picture of the Day" API accepts the parameters shown in
 Figure \@ref(fig:NASA-API-parameters).
 
-```{r NASA-API-parameters, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = 'The set of parameters that you can specify when querying the NASA "Astronomy Picture of the Day" API, along with syntax, default settings, and a description of each.', fig.retina = 2, out.width="100%"}
+```{r NASA-API-parameters, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = 'The set of parameters that you can specify when querying the NASA "Astronomy Picture of the Day" API, along with syntax, default settings, and a description of each.', fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/reading/NASA-API-parameters.png")
 ```
 
