--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -100,7 +100,7 @@ to draw the straight line of best fit through our existing data points.
 The small subset of data as well as the line of best fit are shown
 in Figure \@ref(fig:08-lin-reg1).
 
-```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.pos = "H", out.extra="", fig.cap = "Scatter plot of sale price versus size with line of best fit for subset of the Sacramento housing data."}
+```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "Scatter plot of sale price versus size with line of best fit for subset of the Sacramento housing data."}
 library(tidyverse)
 library(tidymodels)
 library(scales)
@@ -149,7 +149,7 @@ above to evaluate the predicted sale price given the value we have for the
 predictor variable&mdash;here 2,000 square feet. Figure
 \@ref(fig:08-lin-reg2) demonstrates this process.
 
-```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Scatter plot of sale price versus size with line of best fit and a red dot at the predicted sale price for a 2,000 square-foot home."}
+```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Scatter plot of sale price versus size with line of best fit and a red dot at the predicted sale price for a 2,000 square-foot home."}
 small_model <- lm(price ~ sqft, data = small_sacramento)
 prediction <- predict(small_model, data.frame(sqft = 2000))
 
@@ -176,7 +176,7 @@ exactly does simple linear regression choose the line of best fit? Many
 different lines could be drawn through the data points.
 Some plausible examples are shown in Figure \@ref(fig:08-several-lines).
 
-```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3.5, fig.width = 4.5,  fig.cap = "Scatter plot of sale price versus size with many possible lines that could be drawn through the data points."}
+```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3.5, fig.width = 4.5,  fig.align = "center", fig.cap = "Scatter plot of sale price versus size with many possible lines that could be drawn through the data points."}
 small_plot +
   geom_abline(intercept = -64542.23, slope = 190, color = "darkorange", linewidth = 1) +
   geom_abline(intercept = -6900, slope = 175, color = "purple", linewidth = 1) +
@@ -191,7 +191,7 @@ accuracy of a simple linear regression model,
 we use RMSPE&mdash;the same measure of predictive performance we used with K-NN regression.
 \index{RMSPE}
 
-```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Scatter plot of sale price versus size with red lines denoting the vertical distances between the predicted values and the observed data points."}
+```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Scatter plot of sale price versus size with red lines denoting the vertical distances between the predicted values and the observed data points."}
 small_sacramento <- small_sacramento |>
   mutate(predicted = predict(small_model))
 
@@ -300,7 +300,7 @@ plot of the original housing price data,
 so that we can qualitatively assess if the model seems to fit the data well.
 Figure \@ref(fig:08-lm-predict-all) displays the result.
 
-```{r 08-lm-predict-all, fig.height = 3.5, fig.width = 4.5, warning = FALSE, fig.pos = "H", out.extra="", message = FALSE, fig.cap = "Scatter plot of sale price versus size with line of best fit for the full Sacramento housing data."}
+```{r 08-lm-predict-all, fig.height = 3.5, fig.width = 4.5, warning = FALSE, fig.pos = "H", out.extra="", message = FALSE, fig.align = "center", fig.cap = "Scatter plot of sale price versus size with line of best fit for the full Sacramento housing data."}
 sqft_prediction_grid <- tibble(
     sqft = c(
         sacramento |> select(sqft) |> min(),
@@ -348,7 +348,7 @@ simple linear regression model predictions for the Sacramento real estate data
 (predicting price from house size) and the "best" K-NN regression model
 obtained from the same problem, shown in Figure \@ref(fig:08-compareRegression).
 
-```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4.75, fig.width = 10, fig.cap = "Comparison of simple linear regression and K-NN regression."}
+```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4.75, fig.width = 10, fig.align = "center", fig.cap = "Comparison of simple linear regression and K-NN regression."}
 set.seed(1234)
 # neighbors = 52 from regression1 chapter
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 52) |>
@@ -510,7 +510,7 @@ is \$`r format(round(lm_mult_test_results |> filter(.metric == 'rmse') |> pull(.
 In the case of two predictors, we can plot the predictions made by our linear regression creates a *plane* of best fit, as
 shown in Figure \@ref(fig:08-3DlinReg).
 
-```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Linear regression plane of best fit overlaid on top of the data (using price, house size, and number of bedrooms as predictors). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the regression plane looks like for learning purposes.", out.width="100%"}
+```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Linear regression plane of best fit overlaid on top of the data (using price, house size, and number of bedrooms as predictors). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the regression plane looks like for learning purposes.", out.width="100%"}
 xvals <- seq(from = min(sacramento_train$sqft),
              to = max(sacramento_train$sqft),
              length = 50)
@@ -652,7 +652,7 @@ the data point is an *outlier*. In blue we plot the original line of best fit, a
 we plot the new line of best fit including the outlier. You can see how different the red line
 is from the blue line, which is entirely caused by that one extra outlier data point.
 
-```{r 08-lm-outlier, fig.height = 3.5, fig.width = 4.5, message = FALSE, warning = FALSE, echo = FALSE, fig.cap = "Scatter plot of a subset of the data, with outlier highlighted in red."}
+```{r 08-lm-outlier, fig.height = 3.5, fig.width = 4.5, message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center", fig.cap = "Scatter plot of a subset of the data, with outlier highlighted in red."}
 sacramento_train_small <- sacramento_train |> sample_n(100)
 sacramento_outlier <- tibble(sqft = 5000, price = 50000)
 
@@ -681,7 +681,7 @@ changes much less when adding the outlier.
 Nevertheless, it is still important when working with linear regression to critically
 think about how much any individual data point is influencing the model.
 
-```{r 08-lm-outlier-2, fig.height = 3.5, fig.width = 4.5, warning = FALSE, message = FALSE, echo = FALSE, fig.cap = "Scatter plot of the full data, with outlier highlighted in red."}
+```{r 08-lm-outlier-2, fig.height = 3.5, fig.width = 4.5, warning = FALSE, message = FALSE, echo = FALSE, fig.align = "center", fig.cap = "Scatter plot of the full data, with outlier highlighted in red."}
 sacramento_outlier <- tibble(sqft = 5000, price = 50000)
 
 lm_plot_outlier_large <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
@@ -715,7 +715,7 @@ Since the two people are each slightly inaccurate, the two measurements might
 not agree exactly, but they are very strongly linearly related to each other,
 as shown in Figure \@ref(fig:08-lm-multicol).
 
-```{r 08-lm-multicol, fig.height = 3.5, fig.width = 4.5, warning = FALSE, echo = FALSE, fig.cap = "Scatter plot of house size (in square feet) measured by person 1 versus house size (in square feet) measured by person 2."}
+```{r 08-lm-multicol, fig.height = 3.5, fig.width = 4.5, warning = FALSE, echo = FALSE, fig.align = "center", fig.cap = "Scatter plot of house size (in square feet) measured by person 1 versus house size (in square feet) measured by person 2."}
 sacramento_train <- sacramento_train |>
                           mutate(sqft1 = sqft + 100 * sample(1000000,
                                                              size=nrow(sacramento_train),
@@ -848,7 +848,7 @@ df <- df |>
 df
 ```
 
-```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Example of a data set with a nonlinear relationship between the predictor and the response."}
+```{r 08-predictor-design, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Example of a data set with a nonlinear relationship between the predictor and the response."}
 curve_plt <- ggplot(df, aes(x = x, y = y)) +
   geom_point() +
   xlab("x") +
@@ -875,7 +875,7 @@ Note that none of the `y` response values have changed between Figures \@ref(fig
 and \@ref(fig:08-predictor-design-2); the only change is that the `x` values
 have been replaced by `z` values.
 
-```{r 08-predictor-design-2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Relationship between the transformed predictor and the response."}
+```{r 08-predictor-design-2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Relationship between the transformed predictor and the response."}
 curve_plt2 <- ggplot(df, aes(x = z, y = y)) +
   geom_point() +
   xlab(expression(paste("z = x"^"3"))) +
