--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -77,8 +77,7 @@ data set. There are 13 entities in the data set in total, corresponding to the
 13 rows in Figure \@ref(fig:02-obs).
 
 ``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/data_frame_slides_cdn.004.jpeg") %>%
-  image_crop("3632x700")
+image_read("img/wrangling/data_frame_slides_cdn.004.png")
 ```
 
 R stores the columns of a data frame as either
@@ -87,8 +86,7 @@ R stores the columns of a data frame as either
 `population`. The next two sections will explain what lists and vectors are.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/data_frame_slides_cdn.005.jpeg") %>%
-  image_crop("3632x700")
+image_read("img/wrangling/data_frame_slides_cdn.005.png")
 ```
 
 ### What is a vector?
@@ -118,9 +116,8 @@ year
 > We encourage readers who are enthusiastic to learn more to read the
 > Vectors chapter of *Advanced R* [@wickham2019advanced].
 
-``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/data_frame_slides_cdn.007.jpeg") %>%
-  image_crop("3632x590")
+``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
+image_read("img/wrangling/data_frame_slides_cdn.007.png")
 ```
 
 \newpage
@@ -164,9 +161,8 @@ consistency. All elements within a single vector must be of the same type (e.g.,
 all elements are characters), whereas elements within a single list can be of
 different types (e.g., characters, integers, logicals, and even other lists). See Figure \@ref(fig:02-vec-vs-list).
 
-``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list.", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/data_frame_slides_cdn.008.jpeg") %>%
-  image_crop("3632x590")
+``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "A vector versus a list.", fig.retina = 2, out.width = "100%"}
+image_read("img/wrangling/data_frame_slides_cdn.008.png")
 ```
 
 ### What does this have to do with data frames?
@@ -185,9 +181,8 @@ On the other hand, if our data frame had *list* columns, there would be no such 
 It is generally much more common to use *vector* columns, though,
 as the values for a single variable are usually all of the same type.
 
-``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types.", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/data_frame_slides_cdn.009.jpeg") %>%
-  image_crop("3632x700")
+``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Data frame and vector types.", fig.retina = 2, out.width = "100%"}
+image_read("img/wrangling/data_frame_slides_cdn.009.png")
 ```
 
 Data frames are actually included in R itself, without the need for any additional packages. However, the
@@ -242,8 +237,7 @@ Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies thes
 three criteria.
 
 ``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "80%"}
-image_read("img/wrangling/tidy_data.001.jpeg") |>
-  image_crop("3632x1400")
+image_read("img/wrangling/tidy_data.001.png")
 ```
 
 There are many good reasons for making sure your data are tidy as a first step in your analysis.
@@ -305,8 +299,8 @@ by creating a column called "year" and a column called
 "longer"&mdash;is shown as the right table in
 Figure \@ref(fig:02-wide-to-long).
 
-``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Pivoting data from a wide to long data format.",  fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/wrangling/pivot_functions.001.jpeg")
+``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Pivoting data from a wide to long data format.",  fig.retina = 2, out.width = "100%"}
+knitr::include_graphics("img/wrangling/pivot_functions.001.png")
 ```
 
 We can achieve this effect in R using the `pivot_longer` function from the `tidyverse` package.
@@ -351,8 +345,8 @@ to get the maximum value.
 
 (ref:img-pivot-longer-with-table) Going from wide to long with the `pivot_longer` function.
 
-```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer-with-table)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/wrangling/pivot_functions.003.jpeg")
+```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:img-pivot-longer-with-table)", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/wrangling/pivot_functions.003.png")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details the arguments that we need to specify
@@ -360,8 +354,8 @@ in the `pivot_longer` function to accomplish this data transformation.
 
 (ref:img-pivot-longer) Syntax for the `pivot_longer` function.
 
-``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer)", fig.retina = 2, out.width="100%"}
-image_read("img/wrangling/pivot_longer.jpeg") |>
+``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:img-pivot-longer)", fig.retina = 2, out.width="100%"}
+image_read("img/wrangling/pivot_longer.png") |>
   image_crop("1625x1900")
 ```
 
@@ -422,8 +416,8 @@ To reshape this untidy data set to a tidy (and in this case, wider) format,
 we need to create columns called "population", "commuters", and "incorporated."
 This is illustrated in the right table of Figure \@ref(fig:long-to-wide).
 
-``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/wrangling/pivot_functions.002.jpeg")
+``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Going from long to wide data.", fig.retina = 2, out.width = "100%"}
+knitr::include_graphics("img/wrangling/pivot_functions.002.png")
 ```
 
 To tidy this type of data in R, we can use the `pivot_wider` function.
@@ -456,8 +450,8 @@ will be tidied using the `pivot_wider` function.
 
 (ref:img-pivot-wider-table) Going from long to wide with the `pivot_wider` function.
 
-``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider-table)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/wrangling/pivot_functions.004.jpeg")
+``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:img-pivot-wider-table)", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/wrangling/pivot_functions.004.png")
 ```
 
 Figure \@ref(fig:img-pivot-wider) details the arguments that we need to specify
@@ -466,8 +460,8 @@ in the `pivot_wider` function.
 
 (ref:img-pivot-wider) Syntax for the `pivot_wider` function.
 
-``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
-image_read("img/wrangling/pivot_wider.jpeg") |>
+``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
+image_read("img/wrangling/pivot_wider.png") |>
   image_crop("1625x850")
 ```
 
@@ -540,8 +534,8 @@ outlines what we need to specify to use `separate`.
 
 (ref:img-separate) Syntax for the `separate` function.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/separate_function.jpeg") |>
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
+image_read("img/wrangling/separate_function.png") |>
   image_crop("1625x1900")
 ```
 
@@ -869,8 +863,8 @@ then `mutate` would create new columns with the names we specified.
 
 (ref:img-mutate) Syntax for the `mutate` function.
 
-``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
-image_read("img/wrangling/mutate_function.jpeg") |>
+``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
+image_read("img/wrangling/mutate_function.png") |>
   image_crop("1625x1900")
 ```
 
@@ -1172,8 +1166,7 @@ or columns, as shown in Figure \@ref(fig:summarize).
 (ref:summarize) `summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.
 
 ```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "85%"}
-image_read("img/wrangling/summarize.001.jpeg") |>
-  image_crop("2000x475+0+300")
+image_read("img/wrangling/summarize.001.png")
 ```
 
 A useful `dplyr` function for calculating summary statistics is `summarize`,
@@ -1270,8 +1263,7 @@ for each of the regions in the data set.
 (ref:summarize-groupby) `summarize` and `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The gray, blue, and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.
 
 ```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize-groupby)", fig.retina = 2, out.width = "85%"}
-image_read("img/wrangling/summarize.002.jpeg") |>
-  image_crop("2000x475+0+300")
+image_read("img/wrangling/summarize.002.png")
 ```
 
 The `group_by` function takes at least two arguments. The first is the data
@@ -1312,8 +1304,7 @@ Then we will also explore how we can use a more general iteration function,
 (ref:summarize-across) `summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.
 
 ```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:summarize-across)", fig.retina = 2, out.width = "85%"}
-image_read("img/wrangling/summarize.003.jpeg") |>
-  image_crop("2000x475+0+300")
+image_read("img/wrangling/summarize.003.png")
 ```
 
 #### `summarize` and `across` for calculating summary statistics on many columns {-}
@@ -1452,8 +1443,7 @@ We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 (ref:mutate-across) `mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.
 
 ```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:mutate-across)",  fig.retina = 2, out.width = "85%"}
-image_read("img/wrangling/summarize.005.jpeg") |>
-  image_crop("2000x475+0+300")
+image_read("img/wrangling/summarize.005.png")
 ```
 
 For example,
@@ -1491,8 +1481,7 @@ We illustrate such a data transformation in Figure \@ref(fig:rowwise).
 (ref:rowwise) `rowwise` and `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.
 
 ```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:rowwise)",  fig.retina = 2, out.width = "85%"}
-image_read("img/wrangling/summarize.004.jpeg") |>
-  image_crop("2000x475+0+300")
+image_read("img/wrangling/summarize.004.png")
 ```
 
 For instance, suppose we want to know the maximum value between `mother_tongue`,
